--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -115,12 +115,33 @@
           <mat-card class="paymentCard">
             <mat-card-content>
               <div class="row">
-                <div class="col col-md-9 align-middle">
+                <div class="col col-md-5 align-middle">
                   <span class="h5 text-secondary">ຍອດລວມ</span>
                   <div class="display-4 text-danger">
                     {{ total | number }}
                   </div>
+
                 </div>
+
+                <div class="col col-md-4 align-middle">
+                  <span class="h5 text-secondary mb-2">ເງິນສະກຸນ</span>
+                  <div class="h6 text-primary text-nowrap align-middle" *ngFor="let rate of exchangeRates">
+                    <div class="row">
+                      <div class="col">
+                        {{ rate.currencyRate | number}} Kip / {{ rate.currencyCode }}
+                      </div>
+                      <div class="col">
+                        =
+                      </div>
+                      <div class="col text-right">
+                        <span class="text-danger">{{ total / rate.currencyRate | number }}</span>
+                        {{ rate.currencyCode }}
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+
                 <div class="col col-md-3 align-middle">
                   <button mat-flat-button color="primary"
                     style="background-color: #15CD72;font-size: 2em;width: 100%;height: 100%;"
