--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -499,6 +499,27 @@
               </div>
             </mat-card-content>
           </mat-card>
+          <mat-card>
+            <mat-card-title>
+              <span class="h4">ລາຍຮັບຍອດຂາຍປະຈຳເດືອນ</span>
+            </mat-card-title>
+            <mat-card-content>
+              <div class="table-responsive">
+                <table class="table table-hover table-bordered">
+                  <thead class="thead-light">
+                    <tr style="text-transform: capitalize;">
+                      <th scope="col" class="text-nowrap"></th>
+                      <th scope="col" class="text-nowrap">ອາຫານ</th>
+                      <th scope="col" class="text-nowrap">Total</th>
+                      <th scope="col" class="text-nowrap">Commission</th>
+                      <th scope="col" class="text-nowrap">Cost</th>
+                      <th scope="col" class="text-nowrap">Price</th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+            </mat-card-content>
+          </mat-card>
         </div>
       </div>
     </div>
