--- a/src/app/dialogs/reward-redim/reward-redim.component.html
+++ b/src/app/dialogs/reward-redim/reward-redim.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="form-group">
     <div class="col col-md-12 text-right">
-      <button type="button" mat-flat-button color="primary">ບັນທືກ</button>
+      <button type="button" mat-flat-button color="primary" (click)="saveRewards()">ບັນທືກ</button>
     </div>
   </div>
 </ng-container>
